# old-soc-new-tricks

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements.txt  test.py
ai-soc-cheatsheet/: radial_decision_tree.html
data/: all_scores_eda.csv  auth_logs.csv  df_summary_mal.txt  security_interesting_events_data.csv
notebooks/: ai_python.ipynb  asm_explorer.ipynb  auth_logs.csv  data_gen.ipynb  eda.ipynb  eda_langchain.ipynb  ml_genai.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: asm_explorer-checkpoint.ipynb
ti/: .env.example  pyproject.toml  requirements.text
ti/db/: chroma.sqlite3
ti/src/ti/: main.py
ti/src/ti/config/: agents.yaml
