[project]
name = "old-soc-new-tricks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepeval>=3.3.5",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scapy>=2.6.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "summarytools>=0.3.0",
]
